force-app/main/default/objects/Inventory__c/fields/Brand_Info__c.field-meta.xml
<CustomField>
    <fullName>Brand_Info__c</fullName>
    <label>Brand Info</label>
    <length>50</length>
    <type>Text</type>
</CustomField>