force-app/main/default/objects/Inventory__c/fields/Character__c.field-meta.xml
<CustomField>
    <fullName>Character__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Character</label>
    <referenceTo>Character__c</referenceTo>
    <relationshipLabel>Inventorys</relationshipLabel>
    <relationshipName>Character_Inventorys</relationshipName>
    <type>Lookup</type>
</CustomField>