force-app/main/default/objects/Inventory__c/fields/Colours__c.field-meta.xml
<CustomField>
    <fullName>Colours__c</fullName>
    <label>Colours</label>
    <length>50</length>
    <type>Text</type>
</CustomField>