force-app/main/default/objects/Inventory__c/fields/DPO__c.field-meta.xml
<CustomField>
    <fullName>DPO__c</fullName>
    <label>DPO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>