force-app/main/default/objects/Inventory__c/fields/Drawing_or_concept_reference__c.field-meta.xml
<CustomField>
    <fullName>Drawing_or_concept_reference__c</fullName>
    <label>Drawing or concept reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>