force-app/main/default/objects/Inventory__c/fields/From_Loan_Date__c.field-meta.xml
<CustomField>
    <fullName>From_Loan_Date__c</fullName>
    <label>From Loan Date</label>
    <type>Date</type>
</CustomField>