force-app/main/default/objects/Inventory__c/fields/Image_for_List_View__c.field-meta.xml
<CustomField>
    <fullName>Image_for_List_View__c</fullName>
    <label>Image for List View</label>
    <length>255</length>
    <type>Text</type>
</CustomField>