force-app/main/default/objects/Inventory__c/fields/Inventory_disposition__c.field-meta.xml
<CustomField>
    <fullName>Inventory_disposition__c</fullName>
    <label>Inventory disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consumable</fullName>
            </value>
            <value>
                <fullName>Destroyed</fullName>
            </value>
            <value>
                <fullName>Gifted</fullName>
            </value>
            <value>
                <fullName>Prop making materials/Drapes</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>Stored</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>