force-app/main/default/objects/Inventory__c/fields/Inventory_Notes__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Notes__c</fullName>
    <label>Inventory Notes</label>
    <length>250</length>
    <type>Text</type>
</CustomField>