force-app/main/default/objects/Inventory__c/fields/List_View_Thumbnail__c.field-meta.xml
<CustomField>
    <fullName>List_View_Thumbnail__c</fullName>
    <formula>IF( NOT( ISBLANK(Image_for_List_View__c) ) , HYPERLINK(Image_for_List_View__c, IMAGE(Image_for_List_View__c, &#39;&#39;,100,100), &#39;_BLANK&#39;), &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List View Thumbnail</label>
    <type>Text</type>
</CustomField>