force-app/main/default/objects/Inventory__c/fields/Petty_Cash_Account_Ref_Number__c.field-meta.xml
<CustomField>
    <fullName>Petty_Cash_Account_Ref_Number__c</fullName>
    <label>Petty Cash Account Ref Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>