force-app/main/default/objects/Inventory__c/fields/Primary_Image__c.field-meta.xml
<CustomField>
    <fullName>Primary_Image__c</fullName>
    <formula>IMAGE(&quot;/sfc/servlet.shepherd/version/download/&quot; + Primary_image_ID__c, &#39;image alternate text&#39;,100,100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Image</label>
    <type>Text</type>
</CustomField>