force-app/main/default/objects/Inventory__c/fields/Primary_image_ID__c.field-meta.xml
<CustomField>
    <fullName>Primary_image_ID__c</fullName>
    <label>Primary image ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>