force-app/main/default/objects/Inventory__c/fields/Prop_Make_Reference__c.field-meta.xml
<CustomField>
    <fullName>Prop_Make_Reference__c</fullName>
    <label>Prop Make Reference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PM0001</fullName>
            </value>
            <value>
                <fullName>PM0002</fullName>
            </value>
            <value>
                <fullName>PM0003</fullName>
            </value>
            <value>
                <fullName>PM0004</fullName>
            </value>
            <value>
                <fullName>PM0005</fullName>
            </value>
            <value>
                <fullName>PM0006</fullName>
            </value>
            <value>
                <fullName>PM0007</fullName>
            </value>
            <value>
                <fullName>PM0008</fullName>
            </value>
            <value>
                <fullName>PM0009</fullName>
            </value>
            <value>
                <fullName>PM0010</fullName>
            </value>
            <value>
                <fullName>PM0011</fullName>
            </value>
            <value>
                <fullName>PM0012</fullName>
            </value>
            <value>
                <fullName>PM0013</fullName>
            </value>
            <value>
                <fullName>PM0014</fullName>
            </value>
            <value>
                <fullName>PM0015</fullName>
            </value>
            <value>
                <fullName>PM0016</fullName>
            </value>
            <value>
                <fullName>PM0017</fullName>
            </value>
            <value>
                <fullName>PM0018</fullName>
            </value>
            <value>
                <fullName>PM0019</fullName>
            </value>
            <value>
                <fullName>PM0020</fullName>
            </value>
            <value>
                <fullName>PM0021</fullName>
            </value>
            <value>
                <fullName>PM0022</fullName>
            </value>
            <value>
                <fullName>PM0023</fullName>
            </value>
            <value>
                <fullName>PM0024</fullName>
            </value>
            <value>
                <fullName>PM0025</fullName>
            </value>
            <value>
                <fullName>PM0026</fullName>
            </value>
            <value>
                <fullName>PM0027</fullName>
            </value>
            <value>
                <fullName>PM0028</fullName>
            </value>
            <value>
                <fullName>PM0029</fullName>
            </value>
            <value>
                <fullName>PM0030</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>