force-app/main/default/objects/Inventory__c/fields/RT_Image_Thumbnail__c.field-meta.xml
<CustomField>
    <fullName>RT_Image_Thumbnail__c</fullName>
    <label>RT Image Thumbnail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>