force-app/main/default/objects/Inventory__c/fields/RV_Price__c.field-meta.xml
<CustomField>
    <fullName>RV_Price__c</fullName>
    <label>RV Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>