force-app/main/default/objects/Inventory__c/fields/Set__c.field-meta.xml
<CustomField>
    <fullName>Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Set</label>
    <referenceTo>Set__c</referenceTo>
    <relationshipLabel>Inventorys</relationshipLabel>
    <relationshipName>Set_Inventorys</relationshipName>
    <type>Lookup</type>
</CustomField>