force-app/main/default/objects/Inventory__c/fields/Source_Contact__c.field-meta.xml
<CustomField>
    <fullName>Source_Contact__c</fullName>
    <label>Source Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>