force-app/main/default/objects/Inventory__c/fields/Source_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Inventorys</relationshipLabel>
    <relationshipName>Source_Name</relationshipName>
    <type>Lookup</type>
</CustomField>