force-app/main/default/objects/Inventory__c/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <label>Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hired</fullName>
            </value>
            <value>
                <fullName>Product Placement</fullName>
            </value>
            <value>
                <fullName>Prop Makes(MTO)</fullName>
                <label>Prop Makes (MTO)</label>
            </value>
            <value>
                <fullName>Purchased</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>