force-app/main/default/objects/Inventory__c/fields/To_Loan_Date__c.field-meta.xml
<CustomField>
    <fullName>To_Loan_Date__c</fullName>
    <label>To Loan Date</label>
    <type>Date</type>
</CustomField>