force-app/main/default/objects/Inventory__c/fields/Unit_Cost_Ex_Vat_shipping__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cost_Ex_Vat_shipping__c</fullName>
    <label>Unit Cost Ex Vat &amp; shipping</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>