force-app/main/default/objects/Inventory__c/recordTypes/Props.recordType-meta.xml
<RecordType>
    <fullName>Props</fullName>
    <active>true</active>
    <label>Props</label>
</RecordType>