force-app/main/default/objects/Inventory__c/recordTypes/SET_DRESSING.recordType-meta.xml
<RecordType>
    <fullName>SET_DRESSING</fullName>
    <active>true</active>
    <label>SET DRESSING</label>
</RecordType>