force-app/main/default/objects/Inventory__c/validationRules/PMR_Field_id_required.validationRule-meta.xml
<ValidationRule>
    <fullName>PMR_Field_id_required</fullName>
    <active>true</active>
    <description>IF(Inventory desposition = Prop making materials/Dapes) then PMR Field is mandatory</description>
    <errorConditionFormula>AND( ISPICKVAL( Inventory_disposition__c , &quot;Prop making materials/Drapes&quot;) ,  ISPICKVAL( Prop_Make_Reference__c , &quot;&quot;)  )</errorConditionFormula>
    <errorDisplayField>Prop_Make_Reference__c</errorDisplayField>
    <errorMessage>PMR Field is mandatory</errorMessage>
</ValidationRule>