force-app/main/default/objects/Inventory__c/validationRules/Source_type_is_Prop_Makes.validationRule-meta.xml
<ValidationRule>
    <fullName>Source_type_is_Prop_Makes</fullName>
    <active>true</active>
    <description>Source_type_is_Hired_or_Product Placemen</description>
    <errorConditionFormula>AND( ISPICKVAL(  Source_Type__c , &quot;Prop Makes (MTO)&quot;), ISPICKVAL(Prop_Make_Reference__c , &quot;&quot;))</errorConditionFormula>
    <errorDisplayField>Prop_Make_Reference__c</errorDisplayField>
    <errorMessage>Prop Make Reference is mandatory</errorMessage>
</ValidationRule>