force-app/main/default/objects/Inventory__c/validationRules/Source_type_is_Purchased.validationRule-meta.xml
<ValidationRule>
    <fullName>Source_type_is_Purchased</fullName>
    <active>true</active>
    <description>Source_type_=_Purchased</description>
    <errorConditionFormula>AND( ISPICKVAL(  Source_Type__c , &quot;Purchased&quot;) , ISNULL(Unit_Cost_Ex_Vat_shipping__c )   )</errorConditionFormula>
    <errorDisplayField>Unit_Cost_Ex_Vat_shipping__c</errorDisplayField>
    <errorMessage>Unit Cost Ex Vat shipping is mandatory</errorMessage>
</ValidationRule>