force-app/main/default/objects/Inventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>List_View_Thumbnail__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Checked_In__c</columns>
    <columns>Brand_Info__c</columns>
    <columns>Character__c</columns>
    <columns>Colours__c</columns>
    <columns>Inventory_disposition__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>