force-app/main/default/objects/Inventory__c/listViews/Checked_In.listView-meta.xml
<ListView>
    <fullName>Checked_In</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Checked_In__c</columns>
    <columns>Returned__c</columns>
    <columns>Brand_Info__c</columns>
    <columns>Character__c</columns>
    <columns>Colours__c</columns>
    <columns>Inventory_disposition__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Checked_In__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Checked In</label>
</ListView>