force-app/main/default/objects/Inventory__c/listViews/Non_Checked_in_Inventories.listView-meta.xml
<ListView>
    <fullName>Non_Checked_in_Inventories</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Checked_In__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Non-Checked in Inventories</label>
</ListView>